tests/tldk/error/error-tldk-read-return-value.pkt
// Test reorder pkts received out of order, receiver sending correct ACK.

// Establish a connection.
0   socket(..., SOCK_STREAM, IPPROTO_TCP) = 3
+0  setsockopt(3, SOL_SOCKET, SO_REUSEADDR, [1], 4) = 0

+0  bind(3, ..., ...) = 0
+0  listen(3, 1) = 0

+0  < S 0:0(0) win 32792 <mss 1000,sackOK,nop,nop,nop,wscale 7>
+0 ~ +1  > S. 0:0(0) ack 1 <...>

+.1 < . 1:1(0) ack 1 win 32792
+0  accept(3, ..., ...) = 4

// fuzz
+0 < . 1:21(20) ack 1 win 30569
+0 < . 1:21(20) ack 1 win 30569
+0 < . 21:41(20) ack 1 win 30318
+0 < . 21:41(20) ack 1 win 30318

// read received data
+0.1 read(4, ..., 101) = 40
+0  write(4, ..., 48) = 48


+0 < . 41:61(20) ack 1 win 13166
+0 < . 41:61(20) ack 1 win 13166

+0  write(4, ..., 113) = 113

+0 < . 61:81(20) ack 1 win 13174
+0 < . 61:81(20) ack 1 win 13174

+0 < . 81:101(20) ack 1 win 30062
+0 < . 81:101(20) ack 1 win 30062
// +0.1 is ok
+0.1 read(4, ..., 101) = 60
